# bevy_squishy

./: Cargo.toml  README.md
examples/: demo.rs
src/: collisions.rs  components.rs  lib.rs
